@@ -3,6 +3,10 @@ Version: 4.1.27
 Date: ????
   Bugfixes:
     - Fixed a crash with boiler fluids that had no heat capacity defined
+    - Fixed a crash with fluid burning boilers
+    - Fixed that recipe ingredients with a minimum temperature smaller than the fluid's default
+      temperature were replaced with a wrong solid
+    - Fixed pyanadon's Nanocrystalline cellulose recipe not being available for all temperatures
 ---------------------------------------------------------------------------------------------------
 Version: 4.1.26
 Date: 2022.12.11
